--- a/configs/trayer.conf
+++ b/configs/trayer.conf
@@ -1,2 +1,2 @@
 # Trayer conf run by xmonad at startup
---alpha 0 --edge top --expand true --widthtype percent --width 10 --transparent true  --tint 0x000000 --height 20 --align right --SetPartialStrut true
+--alpha 0 --edge top --expand true --widthtype percent --width 5 --transparent true  --tint 0x000000 --height 20 --align left --SetPartialStrut true
