trayer.conf: Separate line for each parameter, SetPartialStrut=true

--- a/configs/trayer.conf
+++ b/configs/trayer.conf
@@ -1,2 +1,13 @@
 # Trayer conf run by xmonad at startup
---monitor primary --alpha 0 --edge top --expand true --widthtype percent --width 8 --transparent true  --tint 0x000000 --height 20 --align left --SetPartialStrut false
+--monitor primary
+--alpha 0
+--edge top
+--expand true
+--widthtype percent
+--width 8
+--transparent true
+--tint 0x000000
+--height 20
+--align left
+--SetPartialStrut true
+--SetDockType true
