ranger: Enable some basic config options

--- a/configs/ranger/rc.conf
+++ b/configs/ranger/rc.conf
@@ -57,7 +57,7 @@ set automatically_count_files true
 set open_all_images true
 
 # Be aware of version control systems and display information.
-set vcs_aware false
+set vcs_aware true
 
 # State of the four backends git, hg, bzr, svn. The possible states are
 # disabled, local (only show local info), enabled (show local and remote
@@ -117,7 +117,7 @@ set iterm2_font_width 8
 set iterm2_font_height 11
 
 # Use a unicode "..." character to mark cut-off filenames?
-set unicode_ellipsis false
+set unicode_ellipsis true
 
 # BIDI support - try to properly display file names in RTL languages (Hebrew, Arabic).
 # Requires the python-bidi pip package
@@ -169,7 +169,7 @@ set display_free_space_in_status_bar true
 set display_tags_in_all_columns true
 
 # Set a title for the window?
-set update_title false
+set update_title true
 
 # Set the title to "ranger" in the tmux program?
 set update_tmux_title true
@@ -182,7 +182,7 @@ set shorten_title 3
 set hostname_in_titlebar true
 
 # Abbreviate $HOME with ~ in the titlebar (first line) of ranger?
-set tilde_in_titlebar false
+set tilde_in_titlebar true 
 
 # How many directory-changes or console-commands should be kept in history?
 set max_history_size 20
@@ -238,7 +238,7 @@ set cd_tab_case sensitive
 
 # Use fuzzy tab completion with the "cd" command. For example,
 # ":cd /u/lo/b<tab>" expands to ":cd /usr/local/bin".
-set cd_tab_fuzzy false
+set cd_tab_fuzzy true
 
 # Avoid previewing files larger than this size, in bytes.  Use a value of 0 to
 # disable this feature.
@@ -280,7 +280,7 @@ set save_tabs_on_exit false
 
 # Enable scroll wrapping - moving down while on the last item will wrap around to
 # the top and vice versa.
-set wrap_scroll false
+set wrap_scroll true
 
 # Set the global_inode_type_filter to nothing.  Possible options: d, f and l for
 # directories, files and symlinks respectively.
