--- a/configs/ranger/rc.conf
+++ b/configs/ranger/rc.conf
@@ -564,6 +564,17 @@ map zv    set use_preview_script!
 map zf    console filter%space
 copymap zf zz
 
+# Git stuff
+map <C-g>a chain shell git add %f; reload_cwd
+map <C-g>r chain shell git rm %f; reload_cwd
+map <C-g>d shell -p git diff %f
+map <C-g>s shell -p git status
+map <C-g>C shell -p git diff --cached
+map <C-g>c chain shell git commit; reload_cwd
+map <C-g>p chain console git push; reload_cwd
+map <C-g>S chain shell git stash; reload_cwd
+map <C-g>P chain shell git stash pop; reload_cwd
+
 # Filter stack
 map .n console filter_stack add name%space
 map .m console filter_stack add mime%space
