ranger: Add color to git commands

--- a/configs/ranger/rc.conf
+++ b/configs/ranger/rc.conf
@@ -567,9 +567,9 @@ copymap zf zz
 # Git stuff
 map <C-g>a chain shell git add %f; reload_cwd
 map <C-g>r chain shell git rm %f; reload_cwd
-map <C-g>d shell -p git diff %f
-map <C-g>s shell -p git status
-map <C-g>C shell -p git diff --cached
+map <C-g>d shell -p git -c color.ui=always diff %f
+map <C-g>s shell -p git -c color.status=always status
+map <C-g>C shell -p git -c color.ui=always diff --cached
 map <C-g>c chain shell git commit; reload_cwd
 map <C-g>p chain console git push; reload_cwd
 map <C-g>S chain shell git stash; reload_cwd
