ranger: Add mapings for editing rc.conf, scope.sh and rifle.conf

--- a/configs/ranger/rc.conf
+++ b/configs/ranger/rc.conf
@@ -564,6 +564,11 @@ map zv    set use_preview_script!
 map zf    console filter%space
 copymap zf zz
 
+# Edit configs and autoreload
+map xx chain shell vim -p ~/.config/ranger/rc.conf; source ~/.config/ranger/rc.conf
+map xr chain shell vim -p ~/.config/ranger/scope.sh; source ~/.config/ranger/scope.sh
+map xr chain shell vim ~/.config/ranger/rifle.conf; eval fm.rifle.reload_config()
+
 # Git stuff
 map <C-g>a chain shell git add %f; reload_cwd
 map <C-g>r chain shell git rm %f; reload_cwd
