--- a/configs/ranger/rc.conf
+++ b/configs/ranger/rc.conf
@@ -576,7 +576,7 @@ map <C-g>d shell -p git -c color.ui=always diff %f
 map <C-g>s shell -p git -c color.status=always status
 map <C-g>C shell -p git -c color.ui=always diff --cached
 map <C-g>c chain shell git commit; reload_cwd
-map <C-g>p chain console git push; reload_cwd
+map <C-g>p chain console shell git push; reload_cwd
 map <C-g>S chain shell git stash; reload_cwd
 map <C-g>P chain shell git stash pop; reload_cwd
 
