ranger: Fix mapping for scope.sh

--- a/configs/ranger/rc.conf
+++ b/configs/ranger/rc.conf
@@ -566,7 +566,7 @@ copymap zf zz
 
 # Edit configs and autoreload
 map xx chain shell vim -p ~/.config/ranger/rc.conf; source ~/.config/ranger/rc.conf
-map xr chain shell vim -p ~/.config/ranger/scope.sh; source ~/.config/ranger/scope.sh
+map xs chain shell vim -p ~/.config/ranger/scope.sh; source ~/.config/ranger/scope.sh
 map xr chain shell vim ~/.config/ranger/rifle.conf; eval fm.rifle.reload_config()
 
 # Git stuff
