ranger: Map <C-g>x to git checkout

--- a/configs/ranger/rc.conf
+++ b/configs/ranger/rc.conf
@@ -579,6 +579,7 @@ map <C-g>c chain shell git commit; reload_cwd
 map <C-g>p chain console shell git push; reload_cwd
 map <C-g>S chain shell git stash; reload_cwd
 map <C-g>P chain shell git stash pop; reload_cwd
+map <G-g>x chain shell git checkout %f; reload_cwd
 
 # Filter stack
 map .n console filter_stack add name%space
