ranger: rc.conf: Add Ctrl+E to execute a script

--- a/configs/ranger/rc.conf
+++ b/configs/ranger/rc.conf
@@ -581,6 +581,9 @@ map <C-g>S chain shell git stash; reload_cwd
 map <C-g>P chain shell git stash pop; reload_cwd
 map <G-g>x chain shell git checkout %f; reload_cwd
 
+# Execute a script
+map <C-E> chain console shell -p ./%f
+
 # Filter stack
 map .n console filter_stack add name%space
 map .m console filter_stack add mime%space
