ranger: rc.conf: Add bindings for cargo

--- a/configs/ranger/rc.conf
+++ b/configs/ranger/rc.conf
@@ -584,6 +584,12 @@ map <G-g>x chain shell git checkout %f; reload_cwd
 # Execute a script
 map <C-E> chain console shell -p ./%f
 
+# Rust Cargo Stuff
+map Cc shell -p cargo check --color always
+map Cb shell -p cargo build --color always
+map CC shell -p cargo clippy --color always
+map Cn console shell cargo new
+
 # Filter stack
 map .n console filter_stack add name%space
 map .m console filter_stack add mime%space
