ranger: rc.conf: Add bindings for xmonad

--- a/configs/ranger/rc.conf
+++ b/configs/ranger/rc.conf
@@ -590,6 +590,11 @@ map Cb shell -p cargo build --color always
 map CC shell -p cargo clippy --color always
 map Cn console shell cargo new
 
+# Xmonad stuff
+map Xc shell -p xmonad --recompile
+map XR shell xmonad --restart
+map Xx shell vim -p ~/.xmonad/xmonad.hs
+
 # Filter stack
 map .n console filter_stack add name%space
 map .m console filter_stack add mime%space
