--- a/configs/ranger/rifle.conf
+++ b/configs/ranger/rifle.conf
@@ -106,6 +106,7 @@ ext rb  = ruby -- "$1"
 ext js  = node -- "$1"
 ext sh  = sh -- "$1"
 ext php = php -- "$1"
+ext rs  = ${VISUAL:-$EDITOR} -- "$1"
 
 #--------------------------------------------
 # Audio without X
