--- a/configs/ranger/rc.conf
+++ b/configs/ranger/rc.conf
@@ -579,7 +579,15 @@ map <C-g>c chain shell git commit; reload_cwd
 map <C-g>p chain console shell git push; reload_cwd
 map <C-g>S chain shell git stash; reload_cwd
 map <C-g>P chain shell git stash pop; reload_cwd
-map <G-g>x chain shell git checkout %f; reload_cwd
+map <C-g>x chain shell git checkout %f; reload_cwd
+map <C-g>g console shell git grep
+
+# Makefile stuff
+map bb shell -p make
+map bc shell -p ./configure
+map bi shell -p make install
+map bm console shell -p make
+map bx shell -p make clean
 
 # Execute a script
 map <C-E> chain console shell -p ./%f
