ranger: Git commands for git log

--- a/configs/ranger/rc.conf
+++ b/configs/ranger/rc.conf
@@ -581,6 +581,8 @@ map <C-g>S chain shell git stash; reload_cwd
 map <C-g>P chain shell git stash pop; reload_cwd
 map <C-g>x chain shell git checkout %f; reload_cwd
 map <C-g>g console shell git grep
+map <C-g>l shell -p git -c color.ui=always log --pretty=oneline --abbrev-commit
+map <C-g>t shell -p tig
 
 # Makefile stuff
 map bb shell -p make
