ranger: rc.conf: Add keybinding for vimserver command

--- a/configs/ranger/rc.conf
+++ b/configs/ranger/rc.conf
@@ -568,6 +568,11 @@ copymap zf zz
 map xx chain shell vim -p ~/.config/ranger/rc.conf; source ~/.config/ranger/rc.conf
 map xs chain shell vim -p ~/.config/ranger/scope.sh; source ~/.config/ranger/scope.sh
 map xr chain shell vim ~/.config/ranger/rifle.conf; eval fm.rifle.reload_config()
+map xc chain shell vim ~/.config/ranger/commands.py
+
+# Open in vim server
+map <C-o>o vimserver %f
+map <C-o>s console vimserver --set%space
 
 # Git stuff
 map <C-g>a chain shell git add %f; reload_cwd
