rc.conf: Add keybinding for git commit --amend

--- a/configs/ranger/rc.conf
+++ b/configs/ranger/rc.conf
@@ -576,6 +576,7 @@ map <C-o>s console vimserver --set%space
 
 # Git stuff
 map <C-g>a chain shell git add %f; reload_cwd
+map <C-g>A chain shell git commit --amend; reload_cwd
 map <C-g>r chain shell git rm %f; reload_cwd
 map <C-g>d shell -p git -c color.ui=always diff %f
 map <C-g>s shell -p git -c color.status=always status
