bookmark: Use clipboard instead of primary selection

--- a/configs/redshift.conf
+++ b/configs/redshift.conf
@@ -1,11 +1,13 @@
 ; Global settings for redshift
 [redshift]
 brightness-day=1
-brightness-night=0.9
-temp-day=9000
-temp-night=2500
+brightness-night=0.6
+temp-day=6000
+temp-night=4000
 location-provider=manual
 adjustment-method=randr
+gamma-day=1
+gamma-night=0.8
 
 [manual]
 lat=48.1
