ranger: rc.conf: Add command for cargo run

--- a/configs/ranger/rc.conf
+++ b/configs/ranger/rc.conf
@@ -605,6 +605,7 @@ map Cc shell -p cargo check --color always
 map Cb shell -p cargo build --color always
 map CC shell -p cargo clippy --color always
 map Cn console shell cargo new
+map Cr shell -p cargo run --color always
 
 # Xmonad stuff
 map Xc shell -p xmonad --recompile
