ranger: Create files, directories and symlinks with Ctrl+n (tab moved to ctrl+t)

--- a/configs/ranger/rc.conf
+++ b/configs/ranger/rc.conf
@@ -500,7 +500,7 @@ map cm search_next order=mtime
 map ca search_next order=atime
 
 # Tabs
-map <C-n>     tab_new
+map <C-t>     tab_new
 map <C-w>     tab_close
 map <TAB>     tab_move 1
 map <S-TAB>   tab_move -1
@@ -589,6 +589,11 @@ map <C-g>x chain shell git checkout %f; reload_cwd
 map <C-g>g console shell git grep
 map <C-g>l shell -p git -c color.ui=always log --pretty=oneline --abbrev-commit
 map <C-g>t shell -p tig
+
+# Create stuff
+map <C-n>f console touch%space
+map <C-n>d console mkdir%space
+map <C-n>s console ln -s%space
 
 # Makefile stuff
 map bb shell -p make
