--- a/configs/picom.conf
+++ b/configs/picom.conf
@@ -1,4 +1,3 @@
-opacity-rule = [
-  "90:class_g = 'st' && focused",
-  "60:class_g = 'st' && !focused"
-];
+fading=true;
+fade-in-step = 0.1;
+fade-out-step = 0.1;
