--- a/configs/ranger/rc.conf
+++ b/configs/ranger/rc.conf
@@ -522,6 +522,7 @@ map <a-8>     tab_open 8
 map <a-9>     tab_open 9
 map <a-r>     tab_shift 1
 map <a-l>     tab_shift -1
+map <a-n>     shell (st &)
 
 # Sorting
 map or set sort_reverse!
